--- a/experiment1.html
+++ b/experiment1.html
@@ -3,9 +3,9 @@
 <html>
   <head>
     
-    <script src='C:\Users\Kent.TLEAVELL_NT\Dropbox\development\r\rCharts_vega/./js/d3.v3.js' type='text/javascript'></script>
-    <script src='C:\Users\Kent.TLEAVELL_NT\Dropbox\development\r\rCharts_vega/./js/vega.js' type='text/javascript'></script>
-    <script src='C:\Users\Kent.TLEAVELL_NT\Dropbox\development\r\rCharts_vega/./js/angular.js' type='text/javascript'></script>
+    <script src='./js/d3.v3.js' type='text/javascript'></script>
+    <script src='./js/vega.js' type='text/javascript'></script>
+    <script src='./js/angular.js' type='text/javascript'></script>
     
     <style>
     .rChart {
