--- a/index_ace_angular.html
+++ b/index_ace_angular.html
@@ -19,7 +19,7 @@
      <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular.min.js"></script>
       <script type='text/javascript' src="http://slidify.github.io/ile/libraries/widgets/interactive/js/ace/js/ace.js"></script>
       <script type='text/javascript' src="http://angular-ui.github.io/ui-ace/dist/ui-ace.min.js"></script>
-    <script type='text/javascript' src="//cdn.jsdelivr.net/lodash/2.4.1/lodash.js"></script>
+    <script type='text/javascript' src="./js/lodash.js"></script>
     <script type='text/javascript' src="./js/beautify.js"></script>
     <script type='text/javascript' src="./js/d3.v3.js"></script>
     <script type='text/javascript' src="./js/vega.js"></script>
@@ -52,11 +52,7 @@
 
     <nav class="uk-navbar">
       <ul class="uk-navbar-nav">
-        <a class="uk-navbar-brand uk-hidden-small" href="../index.html">
-          <img class="uk-margin uk-margin-remove" src="../assets/img/slidify_logo_big.png" width="75" height="20" title="siteLogo" alt="siteLogo">
-        </a>
-     <li 
-        >
+     <li>
       <a href="/index.html">
          
         <i class='uk-icon-home'> </i>Home
