--- a/index.html
+++ b/index.html
@@ -1,195 +1,347 @@
 <!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Surprising Alpha | rCharts Analysis</title>  <link rel=stylesheet href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css"></link>
+<link rel=stylesheet href="http://purecss.io/combo/1.11.2?/css/main-grid.css&amp;/css/main.css&amp;/css/home.css&amp;/css/rainbow/baby-blue.css"></link>
+<link rel=stylesheet href="http://fonts.googleapis.com/css?family=Roboto:300,400"></link>
+<link rel=stylesheet href="http://fonts.googleapis.com/css?family=Oxygen:300"></link>
 
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>rCharts with from.js</title>
+  
+  <link rel="stylesheet" href="libraries/highlighters/prettify/css/twitter-bootstrap.css" />
+</head>
+<body>
+  <div id = "layout">   
+    <div id = "main">
+      <div class="header">
+        <h1>Surprising Alpha | rCharts Analysis</h1>
+        <h2>Quick Bar Plots Using nvd3 and dimple</h2>
+      </div>
+      <div class = "content">
+        
+<pre><code class="r">require(ggvis)
+require(dplyr)
+require(shiny) #need shiny isolate function for as.vega
 
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+#build a rCharts wrapper
+require(rCharts)
+options( viewer=NULL )
+</code></pre>
 
-    <script src="./js/ace.js"></script>
-    <script src="./js/lazy.js"></script>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div id = "editor-data" class ="col-md-4 editor" style="height:250px;">
-        </div><!--col-md-->
-        <div id = "editor-lazyjs" class ="col-md-4 editor" style="height: 250px;">
-        </div><!--col-md-->
-        <div id = "editor-result" class ="col-md-4 editor" style="height: 250px;">
-        </div><!--col-md-->
-      </div><!--row-->
-      <div class="row">
-      
-      </div><!--row-->
-    </div><!--container-->
+<pre><code class="r">rCharts_vega &lt;- setRefClass(
+  &quot;rCharts_vega&quot;,
+  contains = &quot;rCharts&quot;,
+  methods = list(
+    initialize = function(){
+      callSuper(); 
+    },
+    getPayload = function(chartId){
+      list(
+        chartParams = RJSONIO::toJSON(params),
+        chartId = chartId,
+        lib = basename(lib), 
+        liburl = LIB$url
+      )
+    })
+)
 
-    <script>
-      var editor_data = ace.edit("editor-data");
-      editor_data.setTheme("ace/theme/twilight");
-      editor_data.getSession().setMode("ace/mode/json");
+vPlot &lt;- rCharts_vega$new()
+vPlot$setLib( &quot;.&quot; )
+vPlot$templates$script = &quot;./chart_vega.html&quot;
+vPlot$set(
+  bodyattrs = &quot;ng-app=&#39;myApp&#39; ng-controller=&#39;MainCtrl&#39;&quot;
+)
+vPlot$setTemplate(
+  chartDiv = &quot;&lt;div&gt;&lt;/div&gt;&quot;
+)
+vPlot$setTemplate(
+  afterScript = &quot;
+  &lt;script&gt;
+  &lt;/script&gt;     
+  &quot;
+)
+</code></pre>
 
-      var editor_lazyjs = ace.edit("editor-lazyjs");
-      editor_lazyjs.setTheme("ace/theme/twilight");
-      editor_lazyjs.getSession().setMode("ace/mode/javascript");
+<pre><code class="r"># with examples from help/library/ggvis/doc/cookbook.html
+# Scatterplots Example 3
 
-      var editor_result = ace.edit("editor-result");
-      editor_result.setTheme("ace/theme/twilight");
-      editor_result.getSession().setMode("ace/mode/json");
-      editor_result.setReadOnly(true);
+vPlot$params$spec &lt;- mtcars %&gt;% 
+  ggvis(~wt, ~mpg) %&gt;%
+  layer_points() %&gt;%
+  layer_smooths() %&gt;%
+  ggvis:::as.vega()
+vPlot$show(&quot;inline&quot;,cdn=F)
+</code></pre>
 
-      //quick example of a moving average with Lazyjs consecutive
-      var spdata = [
-       {
-         "date": "1957-01-31",
-         "sp500": 44.72
-       },
-      {
-        "date": "1957-02-28",
-        "sp500": 43.26
-      },
-      {
-        "date": "1957-03-29",
-        "sp500": 44.11
-      },
-      {
-        "date": "1957-04-30",
-        "sp500": 45.74
-      },
-      {
-        "date": "1957-05-31",
-        "sp500": 47.43
-      },
-      {
-        "date": "1957-06-28",
-        "sp500": 47.37
-      },
-      {
-        "date": "1957-07-31",
-        "sp500": 47.91
-      },
-      {
-        "date": "1957-08-30",
-        "sp500": 45.22
-      },
-      {
-        "date": "1957-09-30",
-        "sp500": 42.42
-      },
-      {
-        "date": "1957-10-31",
-        "sp500": 41.06
-      },
-      {
-        "date": "1957-11-29",
-        "sp500": 41.72
-      },
-      {
-        "date": "1957-12-31",
-        "sp500": 39.99
-      },
-      {
-        "date": "1958-01-31",
-        "sp500": 41.7
-      },
-      {
-        "date": "1958-02-28",
-        "sp500": 40.84
-      },
-      {
-        "date": "1958-03-31",
-        "sp500": 42.1
-      },
-      {
-        "date": "1958-04-30",
-        "sp500": 43.44
-      },
-      {
-        "date": "1958-05-29",
-        "sp500": 44.09
-      },
-      {
-        "date": "1958-06-30",
-        "sp500": 45.24
-      },
-      {
-        "date": "1958-07-31",
-        "sp500": 47.19
-      },
-      {
-        "date": "1958-08-29",
-        "sp500": 47.75
-      },
-      {
-        "date": "1958-09-30",
-        "sp500": 50.06
-      },
-      {
-        "date": "1958-10-31",
-        "sp500": 51.33
-      },
-      {
-        "date": "1958-11-28",
-        "sp500": 52.48
-      },
-      {
-        "date": "1958-12-31",
-        "sp500": 55.21
-      },
-      {
-        "date": "1959-01-30",
-        "sp500": 55.42
-      },
-      {
-        "date": "1959-02-27",
-        "sp500": 55.41
-      },
-      {
-        "date": "1959-03-31",
-        "sp500": 55.44
-      },
-      {
-        "date": "1959-04-30",
-        "sp500": 57.59
-      },
-      {
-        "date": "1959-05-29",
-        "sp500": 58.68
-      },
-      {
-        "date": "1959-06-30",
-        "sp500": 58.47
-      },
-      {
-        "date": "1959-07-31",
-        "sp500": 60.51
-      },
-      {
-        "date": "1959-08-31",
-        "sp500": 59.6
-      },
-      {
-        "date": "1959-09-30",
-        "sp500": 56.88
-      },
-      {
-        "date": "1959-10-30",
-        "sp500": 57.52
-      }]
+<div></div>
 
-      var ma = Lazy(spdata)
-              .consecutive(10)  //10 day mov avg
-              .map(function (d) {
-                //sum divided by length gives simple moving average
-                madata = {
-                  "date": Lazy(d).pluck("date").last(),
-                  "movavg": Lazy(d).sum(function (d) { return d.sp500 }) / Lazy(d).length()
-                };
-                return madata;
-              });
-      console.log(ma.take(3).toArray());
-    </script>
-  </body>
-</html>
+<pre><code>&lt;nav class=&quot;uk-navbar&quot;&gt;
+  &lt;ul class=&quot;uk-navbar-nav&quot;&gt;
+ &lt;li&gt;
+  &lt;!--a href=&quot;/index.html&quot;--&gt;
+
+    &lt;i class=&#39;uk-icon-home&#39;&gt; &lt;/i&gt;Home
+  &lt;!--/a--&gt;
+&lt;/li&gt;
+&lt;li&gt;
+     &lt;button href=&quot;#&quot; class=&#39;uk-button uk-button-danger&#39; 
+      style=&#39;margin-left:5px; margin-top:5px; margin-right:5px;&#39; ng-click=&#39;parseSpec()&#39;&gt;
+       Submit
+      &lt;/button&gt;
+&lt;/li&gt;
+&lt;li&gt;
+  &lt;div class=&#39;uk-button uk-button-success&#39; 
+    style=&#39;margin-left:5px; margin-top:5px; margin-right:5px;&#39;&gt;
+  Instant Preview
+  &lt;input id=&quot;checkSlave&quot; type=&quot;checkbox&quot; ng-model=&quot;preview&quot;&gt;
+ &lt;/div&gt;
+&lt;/li&gt;
+</code></pre>
+
+<p></ul>
+    </nav>
+        <div class="uk-grid">
+  <div id='editor' ng-model='exampleCode' ui-ace="aceOptions">
+  </div><br/>
+   <div id='vis'></p>
+
+<p></div></p>
+
+<p><script>
+    var lodash = angular.module(&#39;lodash&#39;, []);
+    lodash.factory(&#39;<em>&#39;, function () {
+      return window.</em>;
+      });</p>
+
+<pre><code>var params = {
+</code></pre>
+
+<p>&quot;dom&quot;: &quot;chart197447687443&quot;,
+&quot;width&quot;:    800,
+&quot;height&quot;:    400,
+&quot;bodyattrs&quot;: &quot;ng-app=&#39;myApp&#39; ng-controller=&#39;MainCtrl&#39;&quot;,
+&quot;spec&quot;: {
+ &quot;data&quot;: [
+ {
+ &quot;name&quot;: &quot;mtcars0&quot;,
+&quot;format&quot;: {
+ &quot;type&quot;: &quot;csv&quot;,
+&quot;parse&quot;: {
+ &quot;wt&quot;: &quot;number&quot;,
+&quot;mpg&quot;: &quot;number&quot; 
+} 
+},
+&quot;values&quot;: &quot;\&quot;wt\&quot;,\&quot;mpg\&quot;\n2.62,21\n2.875,21\n2.32,22.8\n3.215,21.4\n3.44,18.7\n3.46,18.1\n3.57,14.3\n3.19,24.4\n3.15,22.8\n3.44,19.2\n3.44,17.8\n4.07,16.4\n3.73,17.3\n3.78,15.2\n5.25,10.4\n5.424,10.4\n5.345,14.7\n2.2,32.4\n1.615,30.4\n1.835,33.9\n2.465,21.5\n3.52,15.5\n3.435,15.2\n3.84,13.3\n3.845,19.2\n1.935,27.3\n2.14,26\n1.513,30.4\n3.17,15.8\n2.77,19.7\n3.57,15\n2.78,21.4&quot; 
+},
+{
+ &quot;name&quot;: &quot;mtcars0/smooth1&quot;,
+&quot;format&quot;: {
+ &quot;type&quot;: &quot;csv&quot;,
+&quot;parse&quot;: {
+ &quot;pred<em>&quot;: &quot;number&quot;,
+&quot;resp</em>&quot;: &quot;number&quot; 
+} 
+},
+&quot;values&quot;: &quot;\&quot;pred<em>\&quot;,\&quot;resp</em>\&quot;\n1.513,32.08897233857\n1.56250632911392,31.6878645869701\n1.61201265822785,31.2816303797919\n1.66151898734177,30.8703709543688\n1.7110253164557,30.4541875480347\n1.76053164556962,30.0331813981232\n1.81003797468354,29.6074537419678\n1.85954430379747,29.1771058169022\n1.90905063291139,28.7422388602601\n1.95855696202532,28.3001719301537\n2.00806329113924,27.834621969428\n2.05756962025316,27.3476575600419\n2.10707594936709,26.84497968394\n2.15658227848101,26.3322893230667\n2.20608860759494,25.8152874593666\n2.25559493670886,25.2996750747841\n2.30510126582278,24.7911531512637\n2.35460759493671,24.29542267075\n2.40411392405063,23.8181846151875\n2.45362025316456,23.3651399665205\n2.50312658227848,22.955253039598\n2.55263291139241,22.6138488714952\n2.60213924050633,22.3275852300224\n2.65164556962025,22.0817586181852\n2.70115189873418,21.8616655389892\n2.7506582278481,21.65260249544\n2.80016455696203,21.4398659905432\n2.84967088607595,21.2087525273044\n2.89917721518987,20.953335722037\n2.9486835443038,20.7158424594628\n2.99818987341772,20.4957065225374\n3.04769620253165,20.2829337645837\n3.09720253164557,20.0675300389245\n3.14670886075949,19.8395011988825\n3.19621518987342,19.5888530977805\n3.24572151898734,19.2971559094315\n3.29522784810127,18.9444093670088\n3.34473417721519,18.5670026794964\n3.39424050632911,18.2056968860288\n3.44374683544304,17.9009022641924\n3.49325316455696,17.620602502374\n3.54275949367089,17.3400153015964\n3.59226582278481,17.079077805285\n3.64177215189873,16.8175887231322\n3.69127848101266,16.5575726926136\n3.74078481012658,16.3083303048321\n3.79029113924051,16.0791621508901\n3.83979746835443,15.8793688218903\n3.88930379746835,15.7018119854881\n3.93881012658228,15.5259429561214\n3.9883164556962,15.3517253848296\n4.03782278481013,15.1793328075288\n4.08732911392405,15.0089387601353\n4.13683544303798,14.8407167785652\n4.1863417721519,14.6748403987346\n4.23584810126582,14.5114831565596\n4.28535443037975,14.3508185879563\n4.33486075949367,14.193020228841\n4.3843670886076,14.0382616151298\n4.43387341772152,13.8867162827388\n4.48337974683544,13.7385577675841\n4.53288607594937,13.5939596055819\n4.58239240506329,13.4530953326483\n4.63189873417722,13.3161384846995\n4.68140506329114,13.1832625976516\n4.73091139240506,13.0546412074207\n4.78041772151899,12.930447849923\n4.82992405063291,12.8108560610747\n4.87943037974684,12.6960393767918\n4.92893670886076,12.5861713329905\n4.97844303797468,12.4814254655869\n5.02794936708861,12.3819753104973\n5.07745569620253,12.2879944036376\n5.12696202531646,12.1996562809241\n5.17646835443038,12.117134478273\n5.2259746835443,12.0406025316002\n5.27548101265823,11.9702339768221\n5.32498734177215,11.9062023498547\n5.37449367088608,11.8486811866141\n5.424,11.7978440230166&quot; 
+},
+{
+ &quot;name&quot;: &quot;scale/x&quot;,
+&quot;format&quot;: {
+ &quot;type&quot;: &quot;csv&quot;,
+&quot;parse&quot;: {
+ &quot;domain&quot;: &quot;number&quot; 
+} 
+},
+&quot;values&quot;: &quot;\&quot;domain\&quot;\n1.31745\n5.61955&quot; 
+},
+{
+ &quot;name&quot;: &quot;scale/y&quot;,
+&quot;format&quot;: {
+ &quot;type&quot;: &quot;csv&quot;,
+&quot;parse&quot;: {
+ &quot;domain&quot;: &quot;number&quot; 
+} 
+},
+&quot;values&quot;: &quot;\&quot;domain\&quot;\n9.225\n35.075&quot; 
+} 
+],
+&quot;scales&quot;: [
+ {
+ &quot;name&quot;: &quot;x&quot;,
+&quot;domain&quot;: {
+ &quot;data&quot;: &quot;scale/x&quot;,
+&quot;field&quot;: &quot;data.domain&quot; 
+},
+&quot;zero&quot;: false,
+&quot;nice&quot;: false,
+&quot;clamp&quot;: false,
+&quot;range&quot;: &quot;width&quot; 
+},
+{
+ &quot;name&quot;: &quot;y&quot;,
+&quot;domain&quot;: {
+ &quot;data&quot;: &quot;scale/y&quot;,
+&quot;field&quot;: &quot;data.domain&quot; 
+},
+&quot;zero&quot;: false,
+&quot;nice&quot;: false,
+&quot;clamp&quot;: false,
+&quot;range&quot;: &quot;height&quot; 
+} 
+],
+&quot;marks&quot;: [
+ {
+ &quot;type&quot;: &quot;symbol&quot;,
+&quot;properties&quot;: {
+ &quot;update&quot;: {
+ &quot;fill&quot;: {
+ &quot;value&quot;: &quot;#000000&quot; 
+},
+&quot;size&quot;: {
+ &quot;value&quot;:     50 
+},
+&quot;x&quot;: {
+ &quot;scale&quot;: &quot;x&quot;,
+&quot;field&quot;: &quot;data.wt&quot; 
+},
+&quot;y&quot;: {
+ &quot;scale&quot;: &quot;y&quot;,
+&quot;field&quot;: &quot;data.mpg&quot; 
+} 
+},
+&quot;ggvis&quot;: {
+ &quot;data&quot;: {
+ &quot;value&quot;: &quot;mtcars0&quot; 
+} 
+} 
+},
+&quot;from&quot;: {
+ &quot;data&quot;: &quot;mtcars0&quot; 
+} 
+},
+{
+ &quot;type&quot;: &quot;line&quot;,
+&quot;properties&quot;: {
+ &quot;update&quot;: {
+ &quot;stroke&quot;: {
+ &quot;value&quot;: &quot;#000000&quot; 
+},
+&quot;strokeWidth&quot;: {
+ &quot;value&quot;:      2 
+},
+&quot;x&quot;: {
+ &quot;scale&quot;: &quot;x&quot;,
+&quot;field&quot;: &quot;data.pred<em>&quot; 
+},
+&quot;y&quot;: {
+ &quot;scale&quot;: &quot;y&quot;,
+&quot;field&quot;: &quot;data.resp</em>&quot; 
+},
+&quot;fill&quot;: {
+ &quot;value&quot;: &quot;transparent&quot; 
+} 
+},
+&quot;ggvis&quot;: {
+ &quot;data&quot;: {
+ &quot;value&quot;: &quot;mtcars0/smooth1&quot; 
+} 
+} 
+},
+&quot;from&quot;: {
+ &quot;data&quot;: &quot;mtcars0/smooth1&quot; 
+} 
+} 
+],
+&quot;width&quot;:    600,
+&quot;height&quot;:    400,
+&quot;legends&quot;: [],
+&quot;axes&quot;: [
+ {
+ &quot;type&quot;: &quot;x&quot;,
+&quot;scale&quot;: &quot;x&quot;,
+&quot;orient&quot;: &quot;bottom&quot;,
+&quot;layer&quot;: &quot;back&quot;,
+&quot;grid&quot;: true,
+&quot;title&quot;: &quot;wt&quot; 
+},
+{
+ &quot;type&quot;: &quot;y&quot;,
+&quot;scale&quot;: &quot;y&quot;,
+&quot;orient&quot;: &quot;left&quot;,
+&quot;layer&quot;: &quot;back&quot;,
+&quot;grid&quot;: true,
+&quot;title&quot;: &quot;mpg&quot; 
+} 
+],
+&quot;padding&quot;: null,
+&quot;ggvis_opts&quot;: {
+ &quot;width&quot;:    600,
+&quot;height&quot;:    400,
+&quot;keep_aspect&quot;: false,
+&quot;resizable&quot;: true,
+&quot;padding&quot;: {},
+&quot;duration&quot;:    250,
+&quot;renderer&quot;: &quot;svg&quot;,
+&quot;hover_duration&quot;:      0 
+},
+&quot;handlers&quot;: null 
+},
+&quot;id&quot;: &quot;chart197447687443&quot; 
+}
+    var myApp = angular.module(&#39;myApp&#39;, [&#39;ui.ace&#39;, &#39;lodash&#39;], 
+      function($locationProvider){
+        $locationProvider.html5Mode(true);
+      }
+    )</p>
+
+<pre><code>// parse a spec and create a visualization view
+function parse(spec) {
+  return vg.parse.spec(spec, function(chart){
+    chart({el:&#39;#vis&#39;}).update(); 
+  })
+}
+
+
+myApp.controller(&#39;MainCtrl&#39;, function($scope, $http, $location){  
+  $scope.preview = true
+  $scope.exampleCode = js_beautify(JSON.stringify(params.spec))
+
+  $scope.aceOptions = {
+    theme: &#39;solarized_light&#39;,
+    mode: &#39;json&#39;,
+    useWrapMode : true
+  }
+
+  $scope.parseSpec = function(){
+    parse(JSON.parse($scope.exampleCode))
+  }
+
+  $scope.$watch(&#39;exampleCode&#39;, _.debounce(function(newCode){
+    $scope.exampleCode = newCode
+    if ($scope.preview){
+      $scope.parseSpec()
+    }
+  }, 3000))
+})
+</code></pre>
+
+<p></script></p>
+
+      </div>        
+    </div>      
+  </div>
+</body>
+<!-- Load Javascripts for Widgets -->
+  
+  <!-- Google Prettify -->
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/prettify/188.0.0/prettify.js"></script>
+  <script src='libraries/highlighters/prettify/js/lang-r.js'></script>
+  <script>
+    var pres = document.getElementsByTagName("pre");
+    for (var i=0; i < pres.length; ++i) {
+      pres[i].className = "prettyprint linenums";
+    }
+    prettyPrint();
+  </script>
+  <!-- End Google Prettify --> 
+  </html>
