--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@ text-indent: 100px;
 }
 </style>
 
+<p><a href="https://github.com/timelyportfolio/rCharts_vega"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a></p>
+
 <div class="page-header">
   <h1>rCharts Peeks Under the Hood of ggvis</h1>
   <h3>Get a Better Understanding of ggvis + vega</h3>
